--- a/bazhotel/style.css
+++ b/bazhotel/style.css
@@ -96,7 +96,7 @@ ul {
 }
 
 .btm-ft {
-    padding-top: 50px;
+    padding-top: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -146,7 +146,7 @@ ul {
 
 footer {
     margin-top: 0;
-    padding-bottom: 100px;
+    /* padding-bottom: 100px; */
     background-color: var(--primary);
     max-width: 2000px;
     margin: auto;
@@ -162,12 +162,29 @@ footer h2 {
     color: aliceblue;
     background-color: var(--primary);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid: 110px / auto auto auto;
     max-width: 2000px;
     margin: auto;
     border-bottom: 3px solid white;
 }
 
+.button {
+    border-radius: 8px;
+    padding: 0px 3px 0px 3px;
+}
+
+.tel {
+    background: transparent;
+    text-decoration: none;
+    color: white;
+    margin-top: 0;
+}
+
+
+.footer-head {
+    padding: 20px 0 20px;
+}
 
 /*  MEDIA QURY */
 
